Fix carousel sizing on mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -269,18 +269,18 @@ section.about {
 }
 .carousel {
     // height: 530px;
-    height: 500px;
+    height: 300px;
     overflow: hidden;
     // padding-bottom: 30px;
 
     .item {
-        height: 500px;
+        height: 300px;
         overflow: hidden;
         background-color: #777;
     }
     img {
         object-fit: cover;
-        min-height: 500px;
+        min-height: 300px;
     }
     .carousel-indicators {
         // bottom: 0px;
@@ -305,11 +305,21 @@ section.about {
     // }
 }
 @media (min-width: 768px) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-        margin-bottom: 20px;
-        font-size: 21px;
-        line-height: 1.4;
+    .carousel {
+        height: 500px;
+
+        .item {
+            height: 500px;
+        }
+        img {
+            min-height: 500px;
+        }
+        /* Bump up size of carousel content */
+        .carousel-caption p {
+            margin-bottom: 20px;
+            font-size: 21px;
+            line-height: 1.4;
+        }
     }
 }
 .navbar-custom {
